--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 each other the benefit of the doubt, and encourage each other to take initiative to improve ourselves and
                 the company.</p>
             <h3 id="continuous-improvement">Continuous Improvement</h3>
-            <p>We recognize that we can always be better. Therefore, we have strong opinions, loosely held, and take initiative
+            <p>We recognize that we can always be better. Therefore, we have <strong>strong opinions, loosely held</strong>, and take initiative
                 to improve ourselves, the company, and our community.</p>
             <h2 id="time">Time</h2>
             <p>We work a <a href="http://www.extremeprogramming.org/rules/overtime.html">sustainable pace</a>. We work four
@@ -132,19 +132,17 @@
             <p>This section describes how we achieve one week's worth of iteration on a product. It lays out the process we
                 follow and some communication tactics.</p>
             <h3 id="daily-standups">Daily Standups</h3>
-            <p>Every morning, we get together as a team for 10 minutes at 10 AM.</p>
-            <p>We say what we did yesterday, what we're going to do today, and if anything is blocking us. We immediately resolve
-                blockers or help the person after standup.</p>
+            <p>Being a virtual team who work when we are at our best. We use <a href="https://tatsu.io">tatsu.io</a> to do a virtual standup</p>
+            <p>We mention what we are doing. And how we can make things more awesome.</p>
             <p>We do this in order to:</p>
         </div>
         <ul>
-            <li>See each other face-to-face.</li>
+            <li>Let the team know we are still alive</li>
             <li>Learn what others are doing so you can help them.</li>
             <li>Build accountability and trust.</li>
         </ul>
         <h4 id="work-hours">Work hours</h4>
-        <p>We should try to have 4-6 hours (with consideration of time differences) in the work day that overlap between locations
-            to allow for synchronous communication.</p>
+        <p>We try to have 4-6 hours in the work day that overlap for synchronous communication.</p>
         <p>For some people, it is sometimes difficult to disengage from work when working at home. Also, flexible hours means
             that sometime one may work non-traditional hours in the day. We should be conscious to keep to a sustainable
             pace and take a break away from work.</p>
