--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Fair Go Finance">
-    <meta name="author" content="Fair Go Finance">
+    <meta name="author" content="Fair Go Finance">ss
 
     <title>Fair Go Finance | Playbook</title>
 
@@ -87,11 +87,11 @@
             <h3 id="principle-zero">Numero Uno</h3>
                 <p>Our primary principle is to do our best for the team.</p>
                 <h3 id="transparency">Transparency</h3>
-                <p>We stive for face to face communcation and avoid having private conversations about each other or clients.
+                <p>We strive for face to face communcation and avoid having private conversations about each other or clients.
                     Instead, we talk in person, and use tools such as Slack, Trello, and GitHub to communicate openly within
                     a project, within Fair Go, and publicly.</p>
                 <h3 id="honesty">Honesty</h3>
-                <p>While we should be cognizant of people's feelings, and seek to work with each other constructively, we cannot
+                <p>While we should be considerate of people's feelings, and seek to work with each other constructively, we cannot
                     let those concerns get in the way of our happiness and the success of our work. We'd rather be too honest
                     than too polite.</p>
                 <h3 id="trust">Trust</h3>
@@ -108,13 +108,13 @@
                     days for the business and one day on &quot;investment time.&quot; We typically spend Monday-Thursday
                     on business work and Friday on investment.</p>
                 <p>We believe in working wherver and whenever we work best. But we let our team members know when & where we
-                    will be. We know face to face communcation with our team is paramount & <strong>commit to spending at least 1 day in the office per week for conversation</strong>.
+                    will be via Slack. We know face to face communcation with our team is paramount & <strong>commit to spending at least 1 day in the office per week for conversation</strong>.
                     <p>When taking time off during work, we discuss how it will impact the schedule with other team members.</p>
 
                     <h3 id="investment">Investment</h3>
                     <p>Investment time is time for investment in ourselves, our company, and our community. Primarily this means
-                        doing something that interests us like learning a new programming language, contributing to open
-                        source, discussing interesting things, attending community events, or reading an educational book.
+                        doing something that interests us like buiding tools for our team, contributing to open
+                        source, researching & presenting on a topic, attending community events, or just improving the workplace zen.
                         The goal is to encourage individuals to improve and share their knowledge with the rest of the team.</p>
                     <p>We organize our investment work on the <a href="https://trello.com/b/PSuyMLdb/team-time"> &quot;Team Time&quot; Trello board.</a></p>
 
