remove link to nothing

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     than too polite.</p>
                 <h3 id="trust">Trust</h3>
                 <p>Our standards are very high, and bringing on a new team member requires a &quot;yes&quot; from everyone who
-                    participated in the <a href="#interviewing">interview process</a>. Therefore, we expect the best from
+                    participated in the interview process. Therefore, we expect the best from
                     each other, give each other the benefit of the doubt, and encourage each other to take initiative to
                     improve ourselves and the company.</p>
                 <h3 id="continuous-improvement">Continuous Improvement</h3>
