--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Fair Go Finance">
-    <meta name="author" content="Fair Go Finance">ss
+    <meta name="author" content="Fair Go Finance">
 
     <title>Fair Go Finance | Playbook</title>
 
