updated text from Paul

--- a/index.html
+++ b/index.html
@@ -85,37 +85,26 @@
                 <span class="text-muted">we follow</span>
             </h2>
             <h3 id="principle-zero">Numero Uno</h3>
-                <p>Our primary principle is to do our best for the team.</p>
+                <p>Our primary principle is to work as a team to deliver the best outcomes for the business.</p>
                 <h3 id="transparency">Transparency</h3>
-                <p>We strive for face to face communcation and avoid having private conversations about each other or clients.
-                    Instead, we talk in person, and use tools such as Slack, Trello, and GitHub to communicate openly within
-                    a project, within Fair Go, and publicly.</p>
+                <p>We combine  face to face and verbal communcation with individual focus avoid with tools such as Slack, Trello, and GitHub to communicate openly within a project, within Fair Go, and publicly.</p>
                 <h3 id="honesty">Honesty</h3>
-                <p>While we should be considerate of people's feelings, and seek to work with each other constructively, we cannot
-                    let those concerns get in the way of our happiness and the success of our work. We'd rather be too honest
-                    than too polite.</p>
+                <p>While we are considerate of people's feelings and opinions, we cannot let those concerns get in the way of getting the right outcome for the business and the success of our work. We'd rather be too honest than too polite.</p>
                 <h3 id="trust">Trust</h3>
-                <p>Our standards are very high, and bringing on a new team member requires a &quot;yes&quot; from everyone who
-                    participated in the interview process. Therefore, we expect the best from
-                    each other, give each other the benefit of the doubt, and encourage each other to take initiative to
-                    improve ourselves and the company.</p>
+                <p>Our standards are very high, and bringing on a new team member requires a "yes" from everyone who participated in the interview process. Therefore, we expect the best from each other, give each other the benefit of the doubt, and encourage each other to take initiative to improve ourselves to improve my contribution to the team and the company.</p>
                 <h3 id="continuous-improvement">Continuous Improvement</h3>
-                <p>We recognize that we can always be better. Therefore, we have <strong>strong opinions, loosely held</strong>,
-                    and take initiative to improve ourselves, the company, and our community.</p>
-                We are proponents of the <a href=" http://agilemanifesto.org/principles.html">Agile manifesto</a>
+                <p>We recognize that we can always be better. Therefore, we have strong opinions, loosely held, and take initiative to improve ourselves, the company, and our community.
+We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">Agile manifesto</a>
                 <h2 id="time">Time</h2>
                 <p>We work a <a href="http://www.extremeprogramming.org/rules/overtime.html">sustainable pace</a>. We work four
                     days for the business and one day on &quot;investment time.&quot; We typically spend Monday-Thursday
                     on business work and Friday on investment.</p>
-                <p>We believe in working wherver and whenever we work best. But we let our team members know when & where we
-                    will be via Slack. We know face to face communcation with our team is paramount & <strong>commit to spending at least 1 day in the office per week for conversation</strong>.
-                    <p>When taking time off during work, we discuss how it will impact the schedule with other team members.</p>
-
+                <p>We believe in working wherever and whenever we work best. 
+                    Because we rely on each other we confirm if we cannot meet a commitment, including letting our team members know if we cannot get to the office.</p>
+                    <p>We know face to face communcation with our team is paramount & commit to spending at least 3 days in the office per week for conversation.</p>
+<p>When taking time off during work, we discuss how it will impact the schedule with other team members.</p>
                     <h3 id="investment">Investment</h3>
-                    <p>Investment time is time for investment in ourselves, our company, and our community. Primarily this means
-                        doing something that interests us like buiding tools for our team, contributing to open
-                        source, researching & presenting on a topic, attending community events, or just improving the workplace zen.
-                        The goal is to encourage individuals to improve and share their knowledge with the rest of the team.</p>
+                    <p>Investment time is time for investment in ourselves, our company, and our community. Primarily this means doing something that interests us like building tools for our team, contributing to open source, researching & presenting on a topic, attending community events, or just improving the workplace zen. The goal is to encourage individuals to improve and share their knowledge with the rest of the team.</p>
                     <p>We organize our investment work on the <a href="https://trello.com/b/PSuyMLdb/team-time"> &quot;Team Time&quot; Trello board.</a></p>
 
             </div>
