--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h3 id="principle-zero">Numero Uno</h3>
                 <p>Our primary principle is to work as a team to deliver the best outcomes for the business.</p>
                 <h3 id="transparency">Transparency</h3>
-                <p>We combine  face to face and verbal communcation with individual focus avoid with tools such as Slack, Trello, and GitHub to communicate openly within a project, within Fair Go, and publicly.</p>
+                <p>We combine  face to face and verbal communcation with individual focus and use tools such as Slack, Trello, and GitHub to communicate openly within a project, within Fair Go, and publicly.</p>
                 <h3 id="honesty">Honesty</h3>
                 <p>While we are considerate of people's feelings and opinions, we cannot let those concerns get in the way of getting the right outcome for the business and the success of our work. We'd rather be too honest than too polite.</p>
                 <h3 id="trust">Trust</h3>
