--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
                     Because we rely on each other we confirm if we cannot meet a commitment, including letting our team members know if we cannot get to the office.</p>
                     <p>We know face to face communcation with our team is paramount & commit to spending at least 3 days in the office per week for conversation.</p>
 <p>When taking time off during work, we discuss how it will impact the schedule with other team members.</p>
-<p><strong>We communicate when and where we work to our team through Slack</strong></p>
+<p><strong>We communicate when and where we work to our team through Slack.</strong></p>
 
                     <h3 id="investment">Investment</h3>
                     <p>Investment time is time for investment in ourselves, our company, and our community. Primarily this means doing something that interests us like building tools for our team, contributing to open source, researching & presenting on a topic, attending community events, or just improving the workplace zen. The goal is to encourage individuals to improve and share their knowledge with the rest of the team.</p>
