--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <li>
                         <a href="#developing">Developing</a>
                     </li>
+                     <li>
+                        <a href="#agile-ceremonies">Agile Ceremonies</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -99,7 +102,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
                 <p>We work a <a href="http://www.extremeprogramming.org/rules/overtime.html">sustainable pace</a>. We work four
                     days for the business and one day on &quot;investment time.&quot; We typically spend Monday-Thursday
                     on business work and Friday on investment.</p>
-                <p>We believe in working wherever and whenever we work best. 
+                <p>We believe in working wherever and whenever we work best.
                     Because we rely on each other we confirm if we cannot meet a commitment, including letting our team members know if we cannot get to the office.</p>
                     <p>We know face to face communcation with our team is paramount & commit to spending at least 3 days in the office per week for conversation.</p>
 <p>When taking time off during work, we discuss how it will impact the schedule with other team members.</p>
@@ -225,6 +228,30 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
                 <p>This saves time and money. We can get started using those services in minutes, and pay a service tens or
                     hundreds of dollars per month instead of paying developers thousands or tens of thousands.</p>
 
+            </div>
+
+
+            <hr class="featurette-divider" id="agile-ceremonies">
+
+            <!-- Fifth Featurette -->
+            <div class="featurette">
+                <img class="featurette-image img-circle img-responsive pull-left">
+                <h2 class="featurette-heading">Agile ceremonies
+                <span class="text-muted">every 2nd Tuesday</span>
+            </h2>
+                <img src="https://cloud.githubusercontent.com/assets/662868/17236113/3150181e-5579-11e6-9dd0-4d29a15797b8.jpg" />
+                <h3 id="sprint-planning">Planning</h3>
+                <strong>Time box:  4 hours (2 weeks sprint) / 8 hours (4 weeks sprint)</strong>
+                <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-planning-meeting">more info </a>
+              </div>
+              <div class="clear"/>
+              <h3 id="sprint-demo">Review / Demo</h3>
+              <strong>Time box:  1.5 hours (2 weeks sprint)</strong>
+              <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-review-meeting">more info </a>
+              <div class="clear"/>
+              <h3 id="sprint-retrospective">Retrospective</h3>
+              <strong>Time box:  2 hours (2 weeks sprint)</strong>
+              <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-retrospective">more info </a>
             </div>
 
             <!-- Footer -->
