--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
               </div>
               <div class="clear"/>
               <h3 id="sprint-demo">Review / Demo</h3>
-              <strong>Time box:  1.5 hours (2 weeks sprint)</strong>
+              <strong>Time box:  1 hour (2 weeks sprint)</strong>
               <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-review-meeting">more info </a>
               <div class="clear"/>
               <h3 id="sprint-retrospective">Retrospective</h3>
