--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
             </h2>
                 <img src="https://cloud.githubusercontent.com/assets/662868/17236113/3150181e-5579-11e6-9dd0-4d29a15797b8.jpg" />
                 <h3 id="sprint-planning">Planning</h3>
-                <strong>Time box:  4 hours (2 weeks sprint) / 8 hours (4 weeks sprint)</strong>
+                <strong>Time box:  4 hours (2 weeks sprint)</strong>
                 <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-planning-meeting">more info </a>
               </div>
               <div class="clear"/>
