--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
                 <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-planning-meeting">more info </a>
               </div>
               <div class="clear"/>
-              <h3 id="sprint-demo">Review / Demo</h3>
+              <h3 id="sprint-demo">Review</h3>
               <a href="https://www.mountaingoatsoftware.com/agile/scrum/sprint-review-meeting">more info </a>
               <div class="clear"/>
               <h3 id="sprint-retrospective">Retrospective</h3>
