--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>We recognize that we can always be better. Therefore, we have strong opinions, loosely held, and take initiative to improve ourselves, the company, and our community.
 We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">Agile manifesto</a>
                 <h2 id="time">Time</h2>
-                <p>We work a <a href="http://www.extremeprogramming.org/rules/overtime.html">sustainable pace</a>. We work four
+                <p>We work at a <a href="http://www.extremeprogramming.org/rules/overtime.html">sustainable pace</a>. We work four
                     days for the business and one day on &quot;investment time.&quot; We typically spend Monday-Thursday
                     on business work and Friday on investment.</p>
                 <p>We believe in working wherever and whenever we work best.
