Setting visible content to "Currently Under Review"

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
+<!--                    <li>
                         <a href="#principles">Principles</a>
                     </li>
                     <li>
@@ -58,7 +58,7 @@
                     </li>
                      <li>
                         <a href="#agile-ceremonies">Agile Ceremonies</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -71,18 +71,25 @@
         <div class="headline">
             <div class="container">
                 <h1>Fair Go Playbook</h1>
-                <h3>Principles we use to guide our team</h3h5>
+                <h3>Principles we use to guide our team</h3>
             </div>
         </div>
     </header>
 
     <!-- Page Content -->
     <div class="container">
+        <div class="featurette">
+            <img class="featurette-image img-circle img-responsive pull-right" >
+            <h2 class="featurette-heading">Currently Under Review</h2>
+            <p>Maybe you can join us and contribute?</p>
+        </div>
+<!--
 
         <hr class="featurette-divider" id="principles">
+-->
 
         <!-- First Featurette -->
-        <div class="featurette">
+<!--        <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" >
             <h2 class="featurette-heading">Principles
                 <span class="text-muted">we follow</span>
@@ -114,10 +121,10 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
 
             </div>
 
-            <hr class="featurette-divider" id="planning">
+            <hr class="featurette-divider" id="planning">-->
 
             <!-- Second Featurette -->
-            <div class="featurette">
+<!--            <div class="featurette">
                 <img class="featurette-image img-circle img-responsive pull-left" >
                 <h2 class="featurette-heading">Planning
                 <span class="text-muted">together</span>
@@ -140,9 +147,10 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
             <p>For some people, it is sometimes difficult to disengage from work when working at home. Also, flexible hours
                 means that sometime one may work non-traditional hours in the day. We should be conscious to keep to a sustainable
                 pace and take a break away from work.</p>
-            <hr class="featurette-divider" id="measuring">
+            <hr class="featurette-divider" id="measuring">-->
 
             <!-- Third Featurette -->
+<!--
             <div class="featurette">
                 <img class="featurette-image img-circle img-responsive pull-right" >
                 <h2 class="featurette-heading">Measuring
@@ -161,9 +169,10 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
             </div>
 
             <hr class="featurette-divider" id="developing">
+-->
 
             <!-- Fourth Featurette -->
-            <div class="featurette">
+<!--            <div class="featurette">
                 <img class="featurette-image img-circle img-responsive pull-left">
                 <h2 class="featurette-heading">Developing
                 <span class="text-muted">with standards</span>
@@ -231,10 +240,10 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
             </div>
 
 
-            <hr class="featurette-divider" id="agile-ceremonies">
+            <hr class="featurette-divider" id="agile-ceremonies">-->
 
             <!-- Fifth Featurette -->
-            <div class="featurette">
+<!--            <div class="featurette">
                 <img class="featurette-image img-circle img-responsive pull-left">
                 <h2 class="featurette-heading">Agile ceremonies
                 <span class="text-muted">We practice Kanban</span>
@@ -248,7 +257,7 @@ We are proponents of the  <a href=" http://agilemanifesto.org/principles.html">A
               <div class="clear"/>
               <h3 id="track-cycle-time">Tracking our progress</h3>
               <a href="https://getcorrello.com/trello-reports-for-kanban">more info </a>
-            </div>
+            </div>-->
 
             <!-- Footer -->
             <footer>
